// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Capsule /> Locked capsule it should match snapshot 1`] = `
<RCTSafeAreaView
  style={
    [
      undefined,
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingHorizontal": 18,
        },
        {
          "flex": 1,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 10,
            "padding": 18,
            "width": "100%",
          },
          {
            "backgroundColor": "#FFFFFF",
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "fontFamily": "SpaceGrotesk_600SemiBold",
              "fontSize": 18,
            }
          }
        >
          Locked Capsule 1
        </Text>
        <Text
          style={
            {
              "color": "#78909C",
              "fontFamily": "SpaceGrotesk_400Regular",
              "fontSize": 16,
            }
          }
        >
          This capsule is locked until
        </Text>
        <Text
          style={
            {
              "color": "#78909C",
              "fontFamily": "SpaceGrotesk_400Regular",
              "fontSize": 16,
            }
          }
        >
          Dec 25, 2025
        </Text>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`<Capsule /> Unlocked capsule it should match snapshot 1`] = `
<RCTSafeAreaView
  style={
    [
      undefined,
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingHorizontal": 18,
        },
        {
          "flex": 1,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 10,
            "padding": 18,
            "width": "100%",
          },
          {
            "backgroundColor": "#FFFFFF",
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "fontFamily": "SpaceGrotesk_600SemiBold",
              "fontSize": 18,
            }
          }
        >
          Oops! Something went wrong.
        </Text>
        <Text
          style={
            {
              "color": "#78909C",
              "fontFamily": "SpaceGrotesk_400Regular",
              "fontSize": 16,
            }
          }
        />
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#D97706",
              "borderColor": "#D97706",
              "borderRadius": 4,
              "borderWidth": 2,
              "marginTop": 18,
              "opacity": 1,
              "padding": 10,
              "width": "100%",
            }
          }
        >
          <Text
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "SpaceGrotesk_600SemiBold",
                "fontSize": 16,
                "textAlign": "center",
              }
            }
          >
            Try Again
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;
